# DeepLearningAnimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Robot.gd  Root Scene.tscn  project.godot  robot.escn.import  robot_inherited.tscn
src/: .gitignore  gdexample.cpp  gdexample.h  gdlibrary.cpp  godot-cpp  godot_headers  godot_skeleton.cpp  godot_skeleton.h  godot_terrain.h  godotcompatibilitytools.h  procedural_moving_skeleton.cpp  procedural_moving_skeleton.h
src/animation/: .gitignore  CMakeLists.txt  README.md
src/animation/src/: main.cpp
src/animation/src/animation/: controller.cpp  controller.cpp.diff  controller.h  keyboard_controller.cpp  keyboard_controller.h
src/animation/src/animation/engine/: skeleton.h  terrain.h
src/animation/src/animation/nn/: neuralnetwork.cpp  neuralnetwork.h  tensor.cpp  tensor.h  types.h
src/animation/src/animation/nn/models/: model.cpp  model.h  pfnnmodel.cpp  pfnnmodel.h  vanillamodel.cpp  vanillamodel.h
src/animation/src/animation/trajectory/: trajectory.cpp  trajectory.h  trajectorypoint.cpp  trajectorypoint.h
src/animation/src/errors/: fileerror.h
src/animation/src/graphics/: chart.cpp  chart.h  fakeskeleton.cpp  fakeskeleton.h  faketerrain.cpp  faketerrain.h  nn_debug_view.cpp  nn_debug_view.h  nn_debug_view.ui  timedgenerator.cpp  timedgenerator.h
src/animation/src/math/: matrix4f.cpp  matrix4f.h  quaternionf.cpp  quaternionf.h  vector3f.cpp  vector3f.h
src/animation/test/: TestTrajectoryIterator.cpp  TestTrajectoryIterator.h
